tests/baselines/reference/override2.errors.txt
tests/cases/conformance/override/override2.ts(17,14): error TS4116: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
tests/cases/conformance/override/override2.ts(23,14): error TS4116: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
tests/cases/conformance/override/override2.ts(24,14): error TS4116: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.


==== tests/cases/conformance/override/override2.ts (3 errors) ====
    abstract class AB {
        abstract foo(v: string): void;
    
        abstract bar(v: string): void;
        abstract baz(v: string): void;
    }
    
    abstract class AD1 extends AB {
    
    }
    
    abstract class AD2 extends AB {
        abstract foo(v: ''): void // need override?
    }
    
    abstract class AD3 extends AB {
        override foo(v: ''): void { } // need override?
                 ~~~
!!! error TS4116: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
        abstract bar(): void;
        baz(): void { }
    }
    
    class D4 extends AB {
        override foo(v: ''): void {}
                 ~~~
!!! error TS4116: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
        override bar(v: ''): void {}
                 ~~~
!!! error TS4116: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
        baz(): void { }
    }